--- a/force-app/main/default/classes/SummitEventsTestSharedDataFactory.cls
+++ b/force-app/main/default/classes/SummitEventsTestSharedDataFactory.cls
@@ -28,7 +28,7 @@ public with sharing class SummitEventsTestSharedDataFactory {
                 Allow_Other_Attendees__c = true,
                 Ask_Mailing_Address__c = 'Ask',
                 Ask_Phone__c = true,
-                Ask_Date_Of_Birth__c = true,
+                Ask_Date_Of_Birth__c = 'Ask',
                 Max_Other_Attendees__c = 5,
                 Close_Event_Days_Before__c = 0,
                 Audience__c = audience,
